--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL="mongodb+srv://zldwkd93_mongodb:CanQTGtiqBccc5eZ@cluster0.b6vj4ob.mongodb.net/partyx-frontend?retryWrites=true&w=majority"
+DATABASE_URL="mongodb+srv://zldwkd93_mongodb:CanQTGtiqBccc5eZ@cluster0.b6vj4ob.mongodb.net/partyx-user-service?retryWrites=true&w=majority"
